// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Group should render additional classes 1`] = `
<div>
  <div
    class="avatar-group other-class"
  >
    <div
      class="avatar avatar--circle avatar--md avatar--primary"
    >
      EC
    </div>
  </div>
</div>
`;

exports[`Avatar Group should renders default component 1`] = `
<div>
  <div
    class="avatar-group"
  >
    <div
      class="avatar avatar--circle avatar--md avatar--primary"
    >
      EC
    </div>
  </div>
</div>
`;
